@@ -16,7 +16,7 @@ Developers
  (maintainer and developer 2.2.4 and later)
 
 
-Logo and Splash Screen Logo
+Logo
 
  Uladzimir Bely <wiselord1983@gmail.com>
  (version 0.4.10 and later)
@@ -90,7 +90,7 @@ Translators
    Chris Leick <c.leick@vollbio.de>
    (for 2.2.3 and later)
 
-   kge <https://www.transifex.net/accounts/profile/kge/>
+   Konstantinos Georgokitsos <kgeorgokitsos@yahoo.de>
    (for 2.2.5 and later)
 
    Tillmann Karras <tilkax@gmail.com>
@@ -98,7 +98,7 @@ Translators
 
  Greek translation
 
-   kge <https://www.transifex.net/accounts/profile/kge/>
+   Konstantinos Georgokitsos <kgeorgokitsos@yahoo.de>
    (for 2.2.5 and later)
 
  Italian translation
