@@ -1,5 +1,7 @@
 --- 2.2.6 2012-02-05 ---
 *** common changes ***
+* Благодаря Konstantinos Georgokitsos доступен греческий перевод.
+* Благодаря Stefano Simoncelli доступен итальянский перевод.
 *** eiskaltdcpp-qt ***
 *** eiskaltdcpp-gtk ***
 *** eiskaltdcpp-daemon ***
