@@ -1,5 +1,7 @@
 --- 2.2.6 2012-02-05 ---
 *** common changes ***
+* Thanks to Konstantinos Georgokitsos the Greek translation is now available.
+* Thanks to Stefano Simoncelli the Italian translation is now available.
 *** eiskaltdcpp-qt ***
 *** eiskaltdcpp-gtk ***
 *** eiskaltdcpp-daemon ***
